add ids-config-parser package
Signed-off-by: Félix <felix.molina@telecom-sudparis.eu>
Signed-off-by: Félix <felixmolina8@gmail.com>

--- a/NetworkDataExtractor/ids_config.conf
+++ b/NetworkDataExtractor/ids_config.conf
@@ -2,7 +2,7 @@
 #
 # !/usr/bin/env python3
 #
-# flow deletion Copyright(c) 2018 Félix Molina.
+# ids_config Sample Config File Copyright(c) 2018 Félix Molina.
 #
 # Many thanks to Télécom SudParis (http://www.telecom-sudparis.eu)
 #
@@ -27,27 +27,33 @@
 # SOFTWARE.
 #
 
-from time import sleep
-import multiprocessing
+[EXTRACTOR]
+
+Interface = wlp2s0
+
+OutputFile = off
+
+OutputFilePath =
+
+CaptureFilters =
+
+Debug = off
+
+SendingInterval = 5
+
+DeletionInterval = 60
 
 
-class FlowDeletion(multiprocessing.Process):
+[COLLECTOR]
 
-    def __init__(self, interval: int = 60, data: multiprocessing.Queue = None, id_list: multiprocessing.Queue = None):
-        super().__init__(name="Flow deletion process")
+IpAddress = 127.0.0.1
 
-        self.__interval = interval
-        self.__data = data
-        self.__removed_ids = id_list
+Port = 8888
 
-    def run(self):
-        while 1:
-            try:
-                sleep(self.__interval)
 
-                flows = self.__data.get()
-                for id in flows.keys():
-                    self.__removed_ids.put(id)
-                # Inscrire dans BDD
-            except (Exception, KeyboardInterrupt):
-                break
+[FEATURES]
+
+; "all" for all features the Extractor can reach
+; Write feature names separted by comas
+; like sourceMac, destinationMac, sourceIp, ..., destinationIp
+Features = all
