--- a/NetworkDataExtractor/ids_config.conf
+++ b/NetworkDataExtractor/ids_config.conf
@@ -56,4 +56,4 @@ Port = 8888
 ; "all" for all features the Extractor can reach
 ; Write feature names separted by comas
 ; like sourceMac, destinationMac, sourceIp, ..., destinationIp
-Features = all
+Features = sourcemac, destinationmac, sourceip, destinationip, transportprotocol, sourceport, destinationport
