fix capture filter bug
Signed-off-by: Félix <felix.molina@telecom-sudparis.eu>
Signed-off-by: Félix <felixmolina8@gmail.com>

--- a/NetworkDataExtractor/ids_config.conf
+++ b/NetworkDataExtractor/ids_config.conf
@@ -31,17 +31,19 @@
 
 Interface = wlp2s0
 
-OutputFile = off
+OutputFile = on
 
-OutputFilePath =
+OutputFilePath = testwithoutarp.pcap
 
-CaptureFilters =
+BPFFilter = not arp
 
-Debug = off
+Debug = on
 
 SendingInterval = 5
 
 DeletionInterval = 60
+
+FlowDuration = 180
 
 
 [COLLECTOR]
@@ -56,4 +58,4 @@ Port = 8888
 ; "all" for all features the Extractor can reach
 ; Write feature names separted by comas
 ; like sourceMac, destinationMac, sourceIp, ..., destinationIp
-Features = sourcemac, destinationmac, sourceip, destinationip, transportprotocol, sourceport, destinationport
+Features = all, sourcemac, destinationmac, sourceip, destinationip, transportprotocol, sourceport, destinationport
