general update fix thread bugs fix timer already joined error
add flow saving service for the collector
update deep analyser -> flow analyser
add flexibility using flow analysis service with a config file

Signed-off-by: Félix <felix.molina@telecom-sudparis.eu>
Signed-off-by: Félix <felixmolina8@gmail.com>

--- a/NetworkDataCollector/flow_analyser.conf
+++ b/NetworkDataCollector/flow_analyser.conf
@@ -2,7 +2,7 @@
 #
 # !/usr/bin/env python3
 #
-# ids_config Sample Config File Copyright(c) 2018 Félix Molina.
+# flow_analyser Sample Config File Copyright(c) 2018 Félix Molina.
 #
 # Many thanks to Télécom SudParis (http://www.telecom-sudparis.eu)
 #
@@ -27,27 +27,31 @@
 # SOFTWARE.
 #
 
-[EXTRACTOR]
+[GENERAL]
 
-Interface = wlp2s0
+ModelPathFile =
 
-OutputFile = off
+WeightsPathFile =
 
-OutputFilePath = capture.pcap
+TrainingDatasetPathFile =
 
-BPFFilter =
+[PREDICTION-HEADERS]
 
-Debug = on
+Analysis
+Backdoor
+DoS
+Exploits
+Fuzzers
+Generic
+Normal
+Reconnaissance
+Shellcode
+Worms
 
-SendingInterval = 5
+[FEATURES]
 
-DeletionInterval = 60
-
-FlowDuration = 180
-
-
-[COLLECTOR]
-
-IpAddress = 127.0.0.1
-
-Port = 8888
+alo
+allo
+aaaallllo
+allalalalala
+lalllllllllll
