--- a/NetworkDataCollector/ids_collector.conf
+++ b/NetworkDataCollector/ids_collector.conf
@@ -2,7 +2,7 @@
 #
 # !/usr/bin/env python3
 #
-# ids_config Sample Config File Copyright(c) 2018 Félix Molina.
+# ids_collector Sample Config File Copyright(c) 2018 Félix Molina.
 #
 # Many thanks to Télécom SudParis (http://www.telecom-sudparis.eu)
 #
@@ -27,27 +27,27 @@
 # SOFTWARE.
 #
 
-[EXTRACTOR]
-
-Interface = wlp2s0
-
-OutputFile = off
-
-OutputFilePath = capture.pcap
-
-BPFFilter =
+[COLLECTOR]
 
 Debug = on
 
-SendingInterval = 5
+IpAddresses = 127.0.0.1
 
-DeletionInterval = 60
+ListeningPort = 8888
 
-FlowDuration = 180
+DeepAnalysisService = off
 
+DeepAnalyserConfigPath =
 
-[COLLECTOR]
+Features = sourceip, destinationip, all
 
-IpAddress = 127.0.0.1
+FlowSavingService = off
 
-Port = 8888
+FlowSaverDirectoryPath =
+
+FlowSaverFilename =
+
+FileSizeLimit = 100M
+
+# csv or json or both
+FileType = both
