collector update flow saver update
Signed-off-by: Félix <felix.molina@telecom-sudparis.eu>
Signed-off-by: Félix <felixmolina8@gmail.com>

--- a/NetworkDataCollector/ids_collector.conf
+++ b/NetworkDataCollector/ids_collector.conf
@@ -29,7 +29,7 @@
 
 [COLLECTOR]
 
-Debug = on
+Debug = off
 
 IpAddresses = 127.0.0.1
 
@@ -41,13 +41,13 @@ DeepAnalyserConfigPath =
 
 Features = sourceip, destinationip, all
 
-FlowSavingService = off
+FlowSavingService = on
 
-FlowSaverDirectoryPath =
+FlowSaverDirectoryPath = .
 
-FlowSaverFilename =
+FlowSaverFilename = testsaver
 
-FileSizeLimit = 100M
+FileSizeLimit = 10M
 
 # csv or json or both
 FileType = both
