--- a/NetworkDataCollector/ids_collector.conf
+++ b/NetworkDataCollector/ids_collector.conf
@@ -27,27 +27,118 @@
 # SOFTWARE.
 #
 
-[COLLECTOR]
+# /!\ DO NOT REMOVE SECTION HEADERS /!\
 
+# Using Windows(R) OS, double \ in path.
+# E.g. C:\\Users\\user\\Documents\\
+
+# It highly recommanded to use absolute path for files and directories
+
+[COLLECTOR]
+# Using Windows(R) OS, double \ in path.
+# E.g. C:\\Users\\user\\Documents\\
+
+# It highly recommanded to use absolute path for files and directories
+
+# Debug: (des)active the debug mode ("on" or "off"). The default is "off"
+# If the debug mode is activated, debug message will store in a log file in the working directory
 Debug = off
 
-IpAddresses = 127.0.0.1
+# IpAddresses: contains the IP addresses authorized to send data on the given listening port.
+# Typicaly, these addresses are NetworkDataExtractor IP.
+# IpAddresses can be empty. In this case, all addresses are authorized.
+# To specify several addresses, separate it with a comma.
+# E.g. IpAddresses = 127.0.0.1, 192.168.1.1, 192.168.10.1
+IpAddresses =
 
+# ListeningPort: simply the port on which the program will receive networking data from probe(s)
+# The default is 8888, but it is recommanded to use to change and personalize it.
 ListeningPort = 8888
 
-DeepAnalysisService = off
+# DeepAnalysisService: (des)activate the flow analyser using a deep learning approach ("on" or "off").
+# The default is "off".
+FlowAnalysisService = off
 
-DeepAnalyserConfigPath =
+# FlowAnalyserConfigPath: the file path of the configuartion file for the Analyser of Flow.
+# This option must be filled if the FlowAnalysisService one is activated.
+# E.g. FlowAnalyserConfigPath = /home/user/Documents/flow_analyser.conf
 
-Features = sourceip, destinationip, all
+# Using Windows(R) OS, double \ in path.
+# E.g. C:\\Users\\user\\Documents\\flow_analyser.conf
+FlowAnalyserConfigPath = flow_analyser.conf
 
+# Features: list of filtered features.
+# If the keyword "all" is present in the row or if the option is empty, all features received will be stored.
+# Otherwise, only features in the row will be kept.
+
+# The features names available are listed below:
+# sourceMac: MAC address of the source
+# destinationMac: MAC address of the destination
+# sourceIp: IP address of the source
+# destinationIp: IP address of the destination
+# sourcePort: Protocol port used by the source
+# destinationPort: Protocol port used by the destination
+# transportProtocol: Protocol number (https://www.iana.org/assignments/protocol-numbers/protocol-numbers.xhtml)
+# request: True if flow contains ARP request or False otherwise
+# reply: True if flow contains ARP reply or False otherwise
+# flowStartTime: Starting time of flow
+# flowEndTime: Ending time of flow
+# flowDurationMilliseconds: Flow duration
+# deltaTimeBetweenPackets: List containing times between each packet
+# flowRate: Flow rate (packet/sec)
+# minSize: Smallest packet of the flow
+# maxSize: Biggest packet of the flow
+# packetSizes: List of each packet size
+# deltaSizeBytes: Delta size between min and max size
+# sumSizeBytes: Total sum of packet sizes
+# meanPacketSizeFromSource: Mean size of packets from the source
+# meanPacketSizeFromDestination: Mean size of packets from the destination
+# sourceToDestinationSizeBytes: Total sum of packets from the source to the destination
+# destinationToSourceSizeBytes: Total sum of packets from the destination to the source
+# sourceToDestinationPacketNumber: Number of packets from the source to the destination
+# destinationToSourcePacketNumber: Number of packets from the destination to the source
+# totalPacket: Number of packets in the flow
+# minTTL: Smallest TTL received
+# maxTTL: Biggest TTL received
+# sourceToDestinationTTL: The last source to destination TTL value
+# destinationToSourceTTL: The last destination to source TTL value
+# direction: SourceToDestination = 0, DestinationToSource = 1, BiDirectional = 2
+# countSameDestinationAddress: No. of connections of the same destination address in 100 connections
+# countSameSourceAddressDestinationPort: No. of connections of the same source address and destination port in 100
+# connections
+# countSameDestinationAddressSourcePort: No of connections of the same destination ip and source port in 100 connections
+# countSameSourceDestinationAddress: No. of connections of the same source and destination address in 100 connections
+# closed: True if the flow is closed, False otherwise
+
+# To specify which features is requested, list features wanted separated by a comma.
+# Features = sourceMac, destinationMac
+Features = all
+
+# FlowSavingService: (des)activate the flow saver used to save received flow ("on" or "off").
+# The default is "on".
 FlowSavingService = on
 
-FlowSaverDirectoryPath = .
+# FlowSaverDirectoryPath: the directory path in which stored files containing flows.
+# This option must be filled if the FlowSavingService one is activated.
+# By default, the directory is the working directory.
+# E.g. FlowSaverDirectoryPath = /home/user/Documents
 
-FlowSaverFilename = testsaver
+# Using Windows(R) OS, double \ in path.
+# E.g. C:\\Users\\user\\Documents
+FlowSaverDirectoryPath =
 
+# FlowSaverFilename: the patern used to named saving files.
+# If the option is empty, a name will be generated automatically.
+# E.g. FlowSaverFilename = save_2019
+FlowSaverFilename = save
+
+# FileSizeLimit: the maximum size of saving files. It is composed by a number greather than 0 and a letter (K, M or G).
+# The default value is 10M. Each saving file size could not be greather than 10 megabytes.
+# K = kilobytes, M = megabytes, G = gigabytes
+# This option is very important because it can severely impaired machine performance
 FileSizeLimit = 10M
 
-# csv or json or both
+# FileType: type of saving file. It may be JSON files and/or CSV files.
+# The default value is "both".
+# both = save files in both JSON and CSV formats, json = save only in json format, csv = save only in csv format
 FileType = both
