--- a/Monitoridz Analyser/monitoridz_collector.conf
+++ b/Monitoridz Analyser/monitoridz_collector.conf
@@ -1,7 +1,5 @@
 # -*- coding: utf-8 -*-
 #
-# !/usr/bin/env python3
-#
 # ids_collector Sample Config File Copyright(c) 2018 Félix Molina.
 #
 # Many thanks to Télécom SudParis (http://www.telecom-sudparis.eu)
@@ -61,10 +59,10 @@ FlowAnalysisService = off
 
 # FlowAnalyserConfigPath: the file path of the configuartion file for the Analyser of Flow.
 # This option must be filled if the FlowAnalysisService one is activated.
-# E.g. FlowAnalyserConfigPath = /home/user/Documents/flow_analyser.conf
+# E.g. FlowAnalyserConfigPath = /home/user/Documents/monitoridz_flow_analyser.conf
 
 # Using Windows(R) OS, double \ in path.
-# E.g. C:\\Users\\user\\Documents\\flow_analyser.conf
+# E.g. C:\\Users\\user\\Documents\\monitoridz_flow_analyser.conf
 FlowAnalyserConfigPath = flow_analyser.conf
 
 # Features: list of filtered features.
