--- a/Monitoridz Analyser/monitoridz_flow_analyser.conf
+++ b/Monitoridz Analyser/monitoridz_flow_analyser.conf
@@ -1,7 +1,5 @@
 # -*- coding: utf-8 -*-
 #
-# !/usr/bin/env python3
-#
 # flow_analyser Sample Config File Copyright(c) 2018 Félix Molina.
 #
 # Many thanks to Télécom SudParis (http://www.telecom-sudparis.eu)
@@ -57,7 +55,7 @@ ModelFilePath =
 
 # Using Windows(R) OS, double \ in path.
 # E.g. C:\\Users\\user\\Documents\\myweights.h5
-WeightsFileWeightsFile =
+WeightsFilePath =
 
 # TrainingDatasetFilePath: the file path of the training dataset used to train the model.
 # The training dataset must be a CSV file.
