extractor configuration update
Signed-off-by: Félix <felix.molina@telecom-sudparis.eu>
Signed-off-by: Félix <felixmolina8@gmail.com>

--- a/Monitoridz Extractor/monitoridz_extractor.conf
+++ b/Monitoridz Extractor/monitoridz_extractor.conf
@@ -25,27 +25,57 @@
 # SOFTWARE.
 #
 
+# /!\ DO NOT REMOVE SECTION HEADERS /!\
+
+# Using Windows(R) OS, double \ in path.
+# E.g. C:\\Users\\user\\Documents\\
+
+# It highly recommanded to use absolute path for files and directories
+
 [EXTRACTOR]
 
+# Interface: the name of the physical interface on the device on which you want to sniff the network traffic.
+# On Linux, generaly it is "wlp2s0" for the WiFi board and "enp3s0" for the Ethernet board.
 Interface = wlp2s0
 
+# OutputFile: (des)activate the pcap output ("on" or "off). The default is "off". If the option is activated, you must
+# give the name of the future pcap file with the OutputFilePath option.
+# E.g. OutputFile = /home/user/Documents/capture.pcap
+# Using Windows(R) OS, double \ in path.
+# E.g. OutputFile = C:\\Users\\user\\Documents\\capture.pcap
 OutputFile = off
 
-OutputFilePath = capture.pcap
+# OutputFilePath: the file path to the pcap file which will be saved. If the OutputFile option is activated, this option
+# should have a value
+OutputFilePath =
 
-BPFFilter = not arp
+# BPFFilter: the sniffing filter. The sythax of this option is special and described on the PyShark and the WireShark
+# website (https://wiki.wireshark.org/CaptureFilters, https://kiminewt.github.io/pyshark/)
+BPFFilter =
 
-Debug = on
+# Debug: (des)activate the debug mode ("on" or "off"). The default is "off"
+# If the debug mode is activated, debug message will store in a log file in the working directory.
+Debug = off
 
+# SendingInterval: the sending period. For each period, all active flows will be sent to the given IP address. See the
+# [COLLECTOR] section in this file. The default is 5 seconds. The metric of the option is the Second (s). The lower
+# authorized value is 1 for 1 second.
 SendingInterval = 5
 
+# DeletionInterval: the deletion period. For each period, all closed flows will be totaly delete from the program but
+# these flows will be saved in the pcap file if the option is activated. The default is 60 seconds. The metric of the
+# option is the Second (s). The lower authorized value is 1 for 1 second.
 DeletionInterval = 60
 
+# FlowDuration: the maximal duration of a flow. This duration is used in the definition of a flow. The default value is
+# 180 seconds. The metric of the option is the Second (s)
 FlowDuration = 180
 
 
 [COLLECTOR]
 
+# IpAddress: the ip address of the Monitoridz Analyser. The default is localhost (127.0.0.1)
 IpAddress = 127.0.0.1
 
+# Port: the port of which send data to the Monitoridz Analyser. The default is 8888.
 Port = 8888
