General update - Fix TCP flow termination - Fix name of the project to NID for Network Intrusion Detector
Signed-off-by: felixmol <felix.molina@telecom-sudparis.eu>

--- a/NID Analyser/nid_collector.conf
+++ b/NID Analyser/nid_collector.conf
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 #
-# ids_collector Sample Config File Copyright(c) 2018 Félix Molina.
+# nid_collector Sample Config File Copyright(c) 2018 Félix Molina.
 #
 # Many thanks to Télécom SudParis (http://www.telecom-sudparis.eu)
 #
@@ -59,10 +59,10 @@ FlowAnalysisService = off
 
 # FlowAnalyserConfigPath: the file path of the configuartion file for the Analyser of Flow.
 # This option must be filled if the FlowAnalysisService one is activated.
-# E.g. FlowAnalyserConfigPath = /home/user/Documents/monitoridz_flow_analyser.conf
+# E.g. FlowAnalyserConfigPath = /home/user/Documents/nid_flow_analyser.conf
 
 # Using Windows(R) OS, double \ in path.
-# E.g. C:\\Users\\user\\Documents\\monitoridz_flow_analyser.conf
+# E.g. C:\\Users\\user\\Documents\\nid_flow_analyser.conf
 FlowAnalyserConfigPath = flow_analyser.conf
 
 # Features: list of filtered features.
