--- a/NID Analyser/nid_flow_analyser.conf
+++ b/NID Analyser/nid_flow_analyser.conf
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 #
-# flow_analyser Sample Config File Copyright(c) 2018 Félix Molina.
+# nid_flow_analyser Sample Config File Copyright(c) 2018 Félix Molina.
 #
 # Many thanks to Télécom SudParis (http://www.telecom-sudparis.eu)
 #
