--- a/NID Extractor/nid_extractor.conf
+++ b/NID Extractor/nid_extractor.conf
@@ -74,8 +74,8 @@ FlowDuration = 180
 
 [COLLECTOR]
 
-# IpAddress: the ip address of the Monitoridz Analyser. The default is localhost (127.0.0.1)
+# IpAddress: the ip address of the NID Analyser. The default is localhost (127.0.0.1)
 IpAddress = 127.0.0.1
 
-# Port: the port of which send data to the Monitoridz Analyser. The default is 8888.
+# Port: the port of which send data to the NID Analyser. The default is 8888.
 Port = 8888
